v17 10 v1 arreglos html y scss

--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -28,6 +28,7 @@
           <img src="../imagenes/logo-de-Tierra-Viva-verde.png" alt="Logo Tierra Viva" height="60">
         </a>
 
+        
         <!-- Botón hamburguesa para móviles -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,11 +57,14 @@
   <!-- ===================================================
        MAIN: sección de productos dulces (Cards)
        =================================================== -->
-  <main class="container py-5">
+  <!--<main class="container py-5">
     <h2 class="text-center mb-4 text-success fw-bold">El sabor dulce de lo hecho a mano</h2>
 
-    <!-- Cards responsivas: 1 por fila en móvil, 3 en laptop -->
-    
+   *** Cards responsivas: 1 por fila en móvil, 3 en laptop -->
+   
+  <main class="container-fluid text-center mt-4">
+       <h3>El sabor dulce de lo hecho a mano</h3>
+
 <!-- ===================================================
      GRID CARD
     =================================================== --> 
