--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -56,9 +56,11 @@
   <!-- ===================================================
        MAIN: carrusel de productos salados
        =================================================== -->
-  <main class="container py-5">
-    <h2 class="text-center mb-4 text-success fw-bold">Lo salado, como debe ser</h2>
-
+  <!--<main class="container py-5">
+    <h2 class="text-center mb-4 text-success fw-bold">Lo salado, como debe ser</h2>-->
+   <main class="container-fluid text-center mt-4">
+    <h3>Lo salado, como debe ser</h3>
+    
     <!-- Carrusel Bootstrap -->
     <div id="carouselSalados" class="carousel slide" data-bs-ride="carousel">
 
