--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -54,8 +54,11 @@
   <!-- ===================================================
        MAIN: formulario + mapa (responsive)
        =================================================== -->
-  <main class="container py-5">
-    <h2 class="text-center mb-4 text-success fw-bold">Tu mensaje nos acerca a lo esencial</h2>
+  <!--<main class="container py-5">
+    <h2 class="text-center mb-4 text-success fw-bold">Tu mensaje nos acerca a lo esencial</h2>-->
+    <main class="container-fluid text-center mt-4">
+      <h3>Tu mensaje nos acerca a lo esencial</h3>
+    
 
     <div class="row g-4 align-items-center">
 
