--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -50,7 +50,7 @@
        BANNER: banner superior con fondo de verdura
        =================================================== -->
     <section class="banner-general banner-salado">
-        <h2>Sabores Salados</h2>
+        <h2 class="texto-sesgado">Sabores Salados</h2>
     </section>
 
   <!-- ===================================================
@@ -77,41 +77,41 @@
 
         <!-- Escabeche de Berenjenas -->
         <div class="carousel-item active">
-          <img src="../imagenes/escabeche-Berenjenas.png" class="d-block w-100" alt="Escabeche de Berenjenas">
+          <img src="../imagenes/escabeche-Berenjenas.png" class="frasco frasco-salado" alt="Escabeche de Berenjenas">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
             <h5>Escabeche de Berenjenas</h5>
             <p>Tradicional y sabroso, con especias naturales y aceite natural.</p>
-            <p>$$$$</p>
+            <p>$3.500,00</p>
         </div>
         </div>
 
         <!-- Escabeche de Pollo -->
         <div class="carousel-item">
-          <img src="../imagenes/escabeche-Pollo.png" class="d-block w-100" alt="Escabeche de Pollo">
+          <img src="../imagenes/escabeche-Pollo.png" class="frasco frasco-salado" alt="Escabeche de Pollo">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
             <h5>Escabeche de Pollo</h5>
             <p>Tiernos trozos de pollo con vegetales y un toque de vinagre artesanal.</p>
-            <p>$$$$</p>
+            <p>$3.500,00</p>
         </div>
         </div>
 
         <!-- Pepinos en Vinagre -->
         <div class="carousel-item">
-          <img src="../imagenes/pepinos-en-vinagre.png" class="d-block w-100" alt="Pepinos en vinagre">
+          <img src="../imagenes/pepinos-en-vinagre.png" class="frasco frasco-salado" alt="Pepinos en vinagre">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
             <h5>Pepinos en Vinagre</h5>
             <p>Crujientes, frescos y con el punto justo de acidez. Perfectos para picadas.</p>
-            <p>$$$$</p>
+            <p>$3.800,00$</p>
         </div>
         </div>
 
         <!-- Salsa de Tomates -->
         <div class="carousel-item">
-          <img src="../imagenes/salsa-de-Tomates.png" class="d-block w-100" alt="Salsa de Tomates">
+          <img src="../imagenes/salsa-de-Tomates.png" class="frasco frasco-salado" alt="Salsa de Tomates">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
             <h5>Salsa de Tomates</h5>
             <p>Elaborada con tomates seleccionados, ideal para tus comidas caseras.</p>
-            <p>$$$$</p>
+            <p>$3.800,00</p>
         </div>
         </div>
 
@@ -135,22 +135,12 @@
        =================================================== -->
   <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
     <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
-
-    <div class="seguinos">
-      <p>Seguinos en</p>
-      <div class="redes">
-          <a href="https://www.instagram.com" target="_blank">
-            <img src="../imagenes/instagram.png" alt="Instagram">
-          </a>
-          <a href="https://www.facebook.com" target="_blank">
-            <img src="../imagenes/fb.png" alt="Facebook">
-          </a>
-          <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
-            <img src="../imagenes/whats_app.png" alt="WhatsApp">
-          </a>
-      </div>
-    </div>
   </footer>
+
+  <!-- Botón flotante de WhatsApp -->
+  <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
+    <img src="../imagenes/whats_app.png" alt="WhatsApp">
+  </a>
 
   <!-- Bootstrap JS para el carrusel y la hamburguesa -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
