--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -48,7 +48,7 @@
        BANNER: banner superior con fondo del arcoiris
        =================================================== -->
     <section class="banner-general banner-contacto">
-        <h2>Contacta con Tierra Viva</h2>
+        <h2 class="texto-sesgado">Contacta con Tierra Viva</h2>
     </section>
 
   <!-- ===================================================
@@ -97,22 +97,12 @@
        =================================================== -->
   <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
     <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
-
-    <div class="seguinos">
-      <p>Seguinos en</p>
-      <div class="redes">
-        <a href="https://www.instagram.com" target="_blank">
-            <img src="../imagenes/instagram.png" alt="Instagram">
-          </a>
-          <a href="https://www.facebook.com" target="_blank">
-            <img src="../imagenes/fb.png" alt="Facebook">
-          </a>
-          <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
-            <img src="../imagenes/whats_app.png" alt="WhatsApp">
-          </a>
-      </div>
-    </div>
   </footer>
+
+  <!-- Botón flotante de WhatsApp -->
+  <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
+    <img src="../imagenes/whats_app.png" alt="WhatsApp">
+  </a>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
