--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -51,7 +51,7 @@
        BANNER: banner superior con fondo de frutas
        =================================================== -->
     <section class="banner-general banner-dulce">
-        <h2>Dulces Artesanales</h2>
+        <h2 class="texto-sesgado">Dulces Artesanales</h2>
     </section>
 
   <!-- ===================================================
@@ -73,12 +73,12 @@
         
         <!-- Card 1: Cascaritas de Naranjas -->
         <div class="card">
-        <img src="../imagenes/cascaritas-de-Naranja.png" class="card-img-top" alt="Cascaritas de Naranja">
+        <img src="../imagenes/cascaritas-de-Naranja.png" class="frasco anim-rotar" alt="Cascaritas de Naranja">
         <div class="card-body">
             <h5 class="card-title">Cascaritas de Naranja</h5>
             <p class="card-text">Finas cáscaras de naranjas confitadas con un toque de dulzura natural</p>
             <p>Un clásico artesanal</p>
-            <p>$$$$$</p>
+            <p>2.100,00 $</p>
         </div>
         </div>
     </div>
@@ -86,12 +86,12 @@
     <!-- Card 2: Dulce de Leche -->
     <div class="col">
         <div class="card">
-        <img src="../imagenes/dulce-de-leche.png" class="card-img-top" alt="Dulce de Leche">
+        <img src="../imagenes/dulce-de-leche.png" class="frasco anim-rotar" alt="Dulce de Leche">
         <div class="card-body">
             <h5 class="card-title">Dulce de Leche</h5>
             <p class="card-text">Suave, cremose y con el sabor tradicional de las recetas caseras</p>
             <p>Puro placer argentino</p>
-            <p>$$$$$</p>
+            <p>1.800,00 $</p>
         </div>
         </div>
     </div>
@@ -99,24 +99,25 @@
     <!-- Card 3: Mermelada de Frutos Rojos -->
     <div class="col">
         <div class="card">
-        <img src="../imagenes/frutos-rojos.png" class="card-img-top" alt="Frutos Rojo">
+        <img src="../imagenes/frutos-rojos.png" class="frasco anim-rotar" alt="Frutos Rojo">
         <div class="card-body">
             <h5 class="card-title">Frutos Rojos</h5>
             <p class="card-text">Frambuesas, moras y arándanos</p>
             <p>Una mezcla deliciosa con aroma a campo y sabor intenso</p>
-            <p>$$$$$</p>
+            <p>2.300,00 $</p>
         </div>
         </div>
     </div>
 
     <!-- Card 4: Mermelada de Kinotos -->
     <div class="col">
-        <img src="../imagenes/kinotos.png" class="card-img-top" alt="Mermelada de Kinotos">
+        <div class="card">
+        <img src="../imagenes/kinotos.png" class="frasco anim-rotar" alt="Mermelada de Kinotos">
         <div class="card-body">
             <h5 class="card-title">Mermelada de Kinotos</h5>
             <p class="card-text">Exquisita combinación de dulzura y acidez</p>
             <p>Con trocitos naturales de kinotos</p>
-            <p>$$$$</p>
+            <p>2.300,00 $</p>
         </div>
         </div>
     </div>
@@ -128,22 +129,12 @@
        =================================================== -->
   <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
     <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
-
-    <div class="seguinos">
-      <p>Seguinos en</p>
-      <div class="redes">
-          <a href="https://www.instagram.com" target="_blank">
-            <img src="../imagenes/instagram.png" alt="Instagram">
-          </a>
-          <a href="https://www.facebook.com" target="_blank">
-            <img src="../imagenes/fb.png" alt="Facebook">
-          </a>
-          <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
-            <img src="../imagenes/whats_app.png" alt="WhatsApp">
-          </a>
-      </div>
-    </div>
   </footer>
+
+  <!-- Botón flotante de WhatsApp -->
+  <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
+    <img src="../imagenes/whats_app.png" alt="WhatsApp">
+  </a>
 
   <!-- Bootstrap JS para menú hamburguesa -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
