--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tierra Viva | Inicio</title>
+  <meta name="description" content="Tierra Viva | Sabores naturales
+Productos caseros elaborados con amor, tradición y los mejores ingredientes naturales.">
 
   <!-- Vinculación con Bootstrap para el menú hamburguesa -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://E.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Vinculación con la hoja de estilos personalizada -->
   <!-- vinculacion con style>
