30 10 v01 retocar las pag, revisar, ver

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tierra Viva | Inicio</title>
-  <meta name="description" content="Tierra Viva | Sabores naturales
-Productos caseros elaborados con amor, tradición y los mejores ingredientes naturales.">
+  
+   <!--Estrategia para posicionar-->
+  <meta name="description" content="Tierra Viva ofrece productos artesanales del campo: mermeladas, escabeches y conservas naturales elaboradas a mano, con el sabor auténtico de lo casero y la frescura de lo simple.">
+  <meta name="keywords" content="mermeladas artesanales, dulces caseros, frutas naturales, conserva artesanal, sabor tradicional, hecho a mano, desayuno saludable, productos del campo, escabeches caseros, conservas naturales, salsa de tomate artesanal, pepinos en vinagre, recetas del campo, sabor auténtico, cocina artesanal">
 
   <!-- Vinculación con Bootstrap para el menú hamburguesa -->
-  <link href="https://E.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Vinculación con la hoja de estilos personalizada -->
   <!-- vinculacion con style>
@@ -57,7 +59,7 @@ Productos caseros elaborados con amor, tradición y los mejores ingredientes nat
 
   <!-- Contenido a la derecha -->
     <div class="contenido">
-      <h2 class="display-4 fw-bold text-success">Bienvenidos</h2>
+      <h1 class="display-4 fw-bold text-success">Bienvenidos</h1>
       <p class="lead text-secondary">Productos caseros elaborados con amor, tradición y los mejores ingredientes naturales.</p>
       <p>Mi madre me enseñó la cocina desde pequeña, y gracias a ella aprendí a disfrutar de los sabores y del placer de preparar alimentos con cariño.</p>
       <p>El IAG me permitió descubrir nuevas técnicas y entender mejor cómo conservar lo natural de cada ingrediente.</p>
@@ -73,15 +75,31 @@ Productos caseros elaborados con amor, tradición y los mejores ingredientes nat
        FOOTER: igual en todas las páginas.
        Incluye logo inferior y redes sociales.
        =================================================== -->
-  <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
-    <img src="./imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
-  </footer>
+ <footer>
+  <img src="./imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
-  <!-- Botón flotante de WhatsApp -->
+  <p>Seguinos en nuestras redes</p>
+
+  <div class="redes">
+    <a href="https://www.facebook.com/TierraViva" target="_blank">
+      <img src="./imagenes/fb.png" alt="Facebook">
+    </a>
+    <a href="https://www.instagram.com/TierraViva" target="_blank">
+      <img src="./imagenes/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.pinterest.com/TierraViva" target="_blank">
+      <img src="./imagenes/pinterest.png" alt="Pinterest">
+    </a>
+  </div>
+
+  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
+
+  <!-- WhatsApp flotante -->
   <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
     <img src="./imagenes/whats_app.png" alt="WhatsApp">
   </a>
-
+</footer>
+        
   <!-- Bootstrap JS (para la hamburguesa y otros componentes) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
