--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tierra Viva | Contacto</title>
 
+     <!--Estrategia para posicionar-->
+  <meta name="description" content="Tierra Viva. Nos encanta conectar con quienes disfrutan los sabores del campo tanto como nosotros.">
+  <meta name="keywords" content="Tierra Viva contacto, pedidos artesanales, comprar mermeladas, comprar escabeches, productos del campo, contacto directo, consultas, atención personalizada, productos naturales, hecho a mano">
+
+
   <!-- Bootstrap (estructura + menú hamburguesa) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   
@@ -48,7 +53,7 @@
        BANNER: banner superior con fondo del arcoiris
        =================================================== -->
     <section class="banner-general banner-contacto">
-        <h2 class="texto-sesgado">Contacta con Tierra Viva</h2>
+        <h1 class="texto-sesgado">Contacta con Tierra Viva</h1>
     </section>
 
   <!-- ===================================================
@@ -57,7 +62,7 @@
   <!--<main class="container py-5">
     <h2 class="text-center mb-4 text-success fw-bold">Tu mensaje nos acerca a lo esencial</h2>-->
     <main class="container-fluid text-center mt-4">
-      <h3>Tu mensaje nos acerca a lo esencial</h3>
+      <h2>Tu mensaje nos acerca a lo esencial</h2>
     
 
     <div class="row g-4 align-items-center">
@@ -93,16 +98,33 @@
   </main>
 
   <!-- ===================================================
-       FOOTER: igual en todas las páginas
+       FOOTER: igual en todas las páginas.
+       Incluye logo inferior y redes sociales.
        =================================================== -->
-  <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
-    <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
-  </footer>
+ <footer>
+  <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
-  <!-- Botón flotante de WhatsApp -->
+  <p>Seguinos en nuestras redes</p>
+
+  <div class="redes">
+    <a href="https://www.facebook.com/TierraViva" target="_blank">
+      <img src="../imagenes/fb.png" alt="Facebook">
+    </a>
+    <a href="https://www.instagram.com/TierraViva" target="_blank">
+      <img src="../imagenes/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.pinterest.com/TierraViva" target="_blank">
+      <img src="../imagenes/pinterest.png" alt="Pinterest">
+    </a>
+  </div>
+
+  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
+
+  <!-- WhatsApp flotante -->
   <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
     <img src="../imagenes/whats_app.png" alt="WhatsApp">
   </a>
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
