--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -104,28 +104,30 @@
  <footer>
   <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
-  <p>Seguinos en nuestras redes</p>
+  
 
-  <div class="redes">
-    <a href="https://www.facebook.com/TierraViva" target="_blank">
-      <img src="../imagenes/fb.png" alt="Facebook">
-    </a>
-    <a href="https://www.instagram.com/TierraViva" target="_blank">
-      <img src="../imagenes/instagram.png" alt="Instagram">
-    </a>
-    <a href="https://www.pinterest.com/TierraViva" target="_blank">
-      <img src="../imagenes/pinterest.png" alt="Pinterest">
-    </a>
-  </div>
+    <p>Seguinos en nuestras redes</p>
 
-  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
+    <div class="redes">
+      <a href="https://www.facebook.com/TierraViva" target="_blank">
+        <img src="../imagenes/fb.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/TierraViva" target="_blank">
+        <img src="../imagenes/instagram.png" alt="Instagram">
+      </a>
+      <a href="https://www.pinterest.com/TierraViva" target="_blank">
+        <img src="../imagenes/pinterest.png" alt="Pinterest">
+      </a>
+    </div>
+
+    <p>© 2025 Tierra Viva | Precios justos para que todos ganemos</p>
+  </footer>
 
   <!-- WhatsApp flotante -->
   <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
     <img src="../imagenes/whats_app.png" alt="WhatsApp">
   </a>
-</footer>
-
+  
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
