--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
  <footer>
   <img src="./imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
-  <p>Seguinos en nuestras redes</p>
+   <p>Seguinos en nuestras redes</p>
 
   <div class="redes">
     <a href="https://www.facebook.com/TierraViva" target="_blank">
@@ -92,14 +92,15 @@
     </a>
   </div>
 
-  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
-
-  <!-- WhatsApp flotante -->
+  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos</p>
+  
+</footer>
+        
+ <!-- WhatsApp flotante -->
   <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
     <img src="./imagenes/whats_app.png" alt="WhatsApp">
   </a>
-</footer>
-        
+  
   <!-- Bootstrap JS (para la hamburguesa y otros componentes) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
