--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -149,13 +149,13 @@
     </a>
   </div>
 
-  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
-
-  <!-- WhatsApp flotante -->
-  <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
-    <img src="../imagenes/whats_app.png" alt="WhatsApp">
-  </a>
+  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos</p>
 </footer>
+
+    <!-- WhatsApp flotante -->
+    <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
+      <img src="../imagenes/whats_app.png" alt="WhatsApp">
+    </a>
 
   <!-- Bootstrap JS para menú hamburguesa -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
