--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -157,13 +157,13 @@ Hechos a mano, con ingredientes nobles y el amor por lo casero.   ">
     </a>
   </div>
 
-  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos 🌿</p>
+  <p>© 2025 Tierra Viva | Precios justos para que todos ganemos</p>
+ </footer>
 
   <!-- WhatsApp flotante -->
   <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
     <img src="../imagenes/whats_app.png" alt="WhatsApp">
   </a>
-</footer>
 
   <!-- Bootstrap JS para el carrusel y la hamburguesa -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
